deployments/telegrambot_ukranian/00app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegrambot-ukranian
  namespace: telegrambot-ukranian
spec:
  selector:
    matchLabels:
      app: telegrambot-ukranian
  replicas: 1
  template:
    metadata:
      labels:
        app: telegrambot-ukranian
    spec:
      containers:
        - name: telegrambot-ukranian
          image: ghcr.io/adrianvillanueva997/telegrambot-ukranian:v0.3.1
          ports:
            - containerPort: 8080
      restartPolicy: Always
