deployments/telegrambot_ukranian/03ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: telegrambot-ukranian-ingressroute
  namespace: telegrambot-ukranian
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ukranian.thexiao77.com`)
      kind: Rule
      services:
        - name: telegrambot-ukranian-service
          port: 8080
      middlewares:
        - name: middleware-https-telegrambot-ukranian
  tls:
    secretName: telegrambot-ukranian-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-https-telegrambot-ukranian
  namespace: telegrambot-ukranian
spec:
  redirectScheme:
    scheme: https
    permanent: true
